--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>To Do List</title>
-  </head>
-  <body>
+<%- include("header") -%>
+    <div class="box" id="heading">
+      <h1> <%= listTitle %> </h1>
+    </div>
 
-    <% if (kindOfDay === "Thursday") { %>
-      <h1 style="color: purple"><%= kindOfDay %> ToDo List</h1>
-  <%  } else { %>
-      <h1 style="color: blue"><%= kindOfDay %> ToDo List</h1>
-  <%  } %>
+    <div class="box">
+      <%  for (var i = 0; i < newListItems.length; i++) { %>
+        <div class="item">
+          <input type="checkbox">
+          <p> <%= newListItems[i] %> </p>
+        </div>
+      <%  } %>
+
+      <form class="item" action="/" method="post">
+          <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+          <button type="submit" name="list" value= <%= listTitle %>>+</button>
+      </form>
+    </div>
 
   </body>
 </html>
+<%- include("footer") -%>
