--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -1,7 +1,13 @@
 <%- include("partials/header") %>
 
-<h1>Home</h1>
+  <h1>Home</h1>
 
-<p> <%= startingContent %> </p>
+  <p> <%= startingContent %> </p>
+
+<%  posts.forEach(function(post) { %>
+      <h1><%=post.title%></h1>
+      <p><%=post.post%></p>
+<%  }); %>
+
 
 <%- include("partials/footer") %>
