--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -6,7 +6,10 @@
 
 <%  posts.forEach(function(post) { %>
       <h1><%=post.title%></h1>
-      <p><%=post.post%></p>
+      <p>
+      <p><%=post.post.substring(0, 100) + " ..."%></p>
+      <a href="/posts/<%=post.title%>">Read More</a>
+      </p>
 <%  }); %>
 
 
